2012-06-13  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-message.c: When setting a header, make sure to
	always clear the header list cache of the toplevel mime_part as
	well.

2012-06-13  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-param.c (rfc2184_param_new): Only decode the charset
	and lang if the parameter is actually encoded. Thanks to Peter
	Bloomfield for this patch.

2012-06-13  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): Keep track of
	DECRYPTION_OKAY status.
	(gpg_decrypt): Only return NULL if decryption failed (e.g. we
	didn't get a DECRYPTION_OKAY status).

	Fixes bug #677088.

2012-06-13  Jeffrey Stedfast  <fejj@gnome.org>

	* docs/reference/building.sgml: Updated docs.

	Fixes bug #676341

2012-04-22  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.9

2012-04-22  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-multipart-signed.c (g_mime_multipart_signed_verify):
	Match protocols like application/x-pkcs7-signature, too.

	Fixes bug #674032.

2012-04-19  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.8

2012-04-12  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c (parser_scan_headers): Make sure to
	initialize 'start' before using it to calculate headers_end in the
	case where parser_fill() failed.

	Fixes bug #673493.

2012-03-10  Daniel Gillmor  <dkg@fifthhorseman.net>

	* mono/gmime-sharp.dll.config.in: Fixed missing .so number.

	Fixes bug #671785.

2012-03-09  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.7

2012-03-09  Daniel Gillmor  <dkg@fifthhorseman.net>

	* gmime/gmime-certificate.h: Remove the trailing comma from the
	last enum item to silence gcc -pedantic warnings.

	* gmime/gmime-message.h: Same.

2012-03-09  Jeffrey Stedfast  <fejj@gnome.org>
