@@ -1,5 +1,14 @@
 2012-06-13  Jeffrey Stedfast  <fejj@gnome.org>
 
+	* gmime/gmime-utils.c (rfc2047_encode_get_rfc822_words): When
+	breaking up really long atom tokens, change the word type to
+	RFC2047 so that we encode them, thus preventing forced header
+	folding which cannot be unmunged.
+	(header_fold): Fixed for cases where the first word in a header is
+	68 chars. (Note: this fix is largely unnecessary due to the above fix)
+
+2012-06-13  Jeffrey Stedfast  <fejj@gnome.org>
+
 	* gmime/gmime-message.c: When setting a header, make sure to
 	always clear the header list cache of the toplevel mime_part as
 	well.
